# laminoAlign

./: LICENSE  README.md  pyproject.toml  requirements.txt
example scripts/TP2/: config_TP2.ini  exampleScript_TP2.ipynb
example scripts/cSAXSe18044/: config_cSAXSe18044.ini  exampleScript_cSAXS.ipynb
src/laminoAlign/: FBP.py  __init__.py  astra.py  coarseAlign.py  data.py  math.py  plotting.py  projectionMatching.py  read.py  regularization.py  reload.py  tomo.py  utils.py  vtkWriter.py
